[feature] add configuration to expand rule map and close topological optimization